--- a/files/basic-html/page57.html
+++ b/files/basic-html/page57.html
@@ -152,7 +152,46 @@ function MM_swapImage() { //v3.0
     </div>
 
     <p class="use-as-video-title"></p>
-    <pre style="white-space:pre-line"><code></code></pre>
+    <pre style="white-space:pre-line"><code> 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                                     Operasi Pasar</code></pre>
      	</div>
     
      </div>
@@ -162,9 +201,9 @@ function MM_swapImage() { //v3.0
            <tr>
              <td width="22%" height="44"><a href="page56.html"><img src="images/previous.png" width="26" height="19" id="Image2" onmouseover="MM_swapImage('Image2','','images/previous2.png',1)" onmouseout="MM_swapImgRestore()" /></a></td>
              <td width="43%">
-             	&nbsp;&nbsp;&nbsp;<a href="page52.html">52</a>&nbsp;&nbsp;&nbsp;<a href="page53.html">53</a>&nbsp;&nbsp;&nbsp;<a href="page54.html">54</a>&nbsp;&nbsp;&nbsp;<a href="page55.html">55</a>&nbsp;&nbsp;&nbsp;<a href="page56.html">56</a>&nbsp;&nbsp;&nbsp;<a href="page57.html">57</a>
+             	&nbsp;&nbsp;&nbsp;<a href="page52.html">52</a>&nbsp;&nbsp;&nbsp;<a href="page53.html">53</a>&nbsp;&nbsp;&nbsp;<a href="page54.html">54</a>&nbsp;&nbsp;&nbsp;<a href="page55.html">55</a>&nbsp;&nbsp;&nbsp;<a href="page56.html">56</a>&nbsp;&nbsp;&nbsp;<a href="page57.html">57</a>&nbsp;&nbsp;&nbsp;<a href="page58.html">58</a>&nbsp;&nbsp;&nbsp;<a href="page59.html">59</a>&nbsp;&nbsp;&nbsp;<a href="page60.html">60</a>&nbsp;&nbsp;&nbsp;<a href="page61.html">61</a>
              </td>
-             <td width="35%"><a href=""><img src="images/next.png" width="26" height="19" id="Image1" onmouseover="MM_swapImage('Image1','','images/next2.png',1)" onmouseout="MM_swapImgRestore()" /></a></td>
+             <td width="35%"><a href="page58.html"><img src="images/next.png" width="26" height="19" id="Image1" onmouseover="MM_swapImage('Image1','','images/next2.png',1)" onmouseout="MM_swapImgRestore()" /></a></td>
            </tr>
          </table>
        </div>
@@ -177,7 +216,7 @@ function MM_swapImage() { //v3.0
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
-  <p><a href=""><img src="images/next_big.png" width="90" height="80" /></a></p>
+  <p><a href="page58.html"><img src="images/next_big.png" width="90" height="80" /></a></p>
 </div>
 
 
