--- a/files/basic-html/page59.html
+++ b/files/basic-html/page59.html
@@ -4,7 +4,7 @@
 				<meta name="robots" content="all"/>
         <meta name="description" content="description">
         <meta name="keywords" content="">
-        <title>Page 54 - Kegiatan tahap 4</title>
+        <title>Page 59 - Kegiatan tahap 4</title>
 <style type="text/css">
 <!--
 body {
@@ -123,7 +123,7 @@ function MM_swapImage() { //v3.0
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
-  <p><a href="page53.html"><img src="images/previous_big.png" width="90" height="80" /></a></p>
+  <p><a href="page58.html"><img src="images/previous_big.png" width="90" height="80" /></a></p>
 </div>
 <div id="middle">
   <div id="top-title"><span class="font1">Basic HTML Version</span>
@@ -134,55 +134,48 @@ function MM_swapImage() { //v3.0
           <td width="35%" style="display:none" align="right"><img src="images/content.png" width="19" height="16" /></td>
           <td width="31%" style="display:none" class="font1"><a href="">Table of Contents</a></td>
           <td width="6%"><img src="images/view.png" width="19" height="16" /></td>
-          <td width="28%" class="font1"><a href="../../index.html#p=54">View Full Version</a></td>
+          <td width="28%" class="font1"><a href="../../index.html#p=59">View Full Version</a></td>
         </tr>
       </table>
     </div>
   </div>
   <div id="content">
      <div id="content-top">
-        <div id="content-top1">Page 54 - Kegiatan tahap 4</div>
-        <div id="content-top2">P. 54</div>
+        <div id="content-top1">Page 59 - Kegiatan tahap 4</div>
+        <div id="content-top2">P. 59</div>
      </div>
      <div id="content-middle">
      	
      	  <div class="text-container">
     <div class="use-as-video cc-float-fix">
-      <a style="text-decoration: none;" href="../../index.html#p=54"><img src="../thumb/54.jpg" /></a>
+      <a style="text-decoration: none;" href="../../index.html#p=59"><img src="../thumb/59.jpg" /></a>
     </div>
 
     <p class="use-as-video-title"></p>
-    <pre style="white-space:pre-line"><code>Operasi di Pasar Sederhana, Kota
+    <pre style="white-space:pre-line"><code>Operasi Pasar Gula Pasir di Pasar
+
+
+         Kosambi, Kota Bandung pada tanggal 21
 
 
 
 
 
 
-                       perasi  pasar  merupakan  upaya  stabilisasi  harga
+         Operasi pasar murah ini gula pasir yang dijual Rp. 12.500 per kg
+
+         maksimal 2 kg. Masyarakat memanfaatkan kesempatan ini dalam
 
 
-                       dengan  sasaran  masyarakat  umum.  Pada  tahun
-
-
-       O2020,  Disperindag  Jabar  melakukan  operasi  pasar
-
-
-        gula  pasir  salah  satunya  di  Pasar  Sederhana  Kota  Bandung
-
-
-        pada tanggal 20 Mei 2020.
+         kondisi harga gula masih naik.
 
 
 
 
 
+         Semoga sedikit membantu kepada masyarakat dalam kondisi
 
-
-
-
-
-
+         pandemi Covid-19 ini.
 
 
 
@@ -212,7 +205,39 @@ function MM_swapImage() { //v3.0
 
 
 
-                                                                                                    Page 48</code></pre>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                                                                                                    Page 49</code></pre>
      	</div>
     
      </div>
@@ -220,11 +245,11 @@ function MM_swapImage() { //v3.0
        <div id="content-bottom2">
          <table width="110" border="0" cellspacing="0" cellpadding="0">
            <tr>
-             <td width="22%" height="44"><a href="page53.html"><img src="images/previous.png" width="26" height="19" id="Image2" onmouseover="MM_swapImage('Image2','','images/previous2.png',1)" onmouseout="MM_swapImgRestore()" /></a></td>
+             <td width="22%" height="44"><a href="page58.html"><img src="images/previous.png" width="26" height="19" id="Image2" onmouseover="MM_swapImage('Image2','','images/previous2.png',1)" onmouseout="MM_swapImgRestore()" /></a></td>
              <td width="43%">
-             	&nbsp;&nbsp;&nbsp;<a href="page49.html">49</a>&nbsp;&nbsp;&nbsp;<a href="page50.html">50</a>&nbsp;&nbsp;&nbsp;<a href="page51.html">51</a>&nbsp;&nbsp;&nbsp;<a href="page52.html">52</a>&nbsp;&nbsp;&nbsp;<a href="page53.html">53</a>&nbsp;&nbsp;&nbsp;<a href="page54.html">54</a>&nbsp;&nbsp;&nbsp;<a href="page55.html">55</a>&nbsp;&nbsp;&nbsp;<a href="page56.html">56</a>&nbsp;&nbsp;&nbsp;<a href="page57.html">57</a>&nbsp;&nbsp;&nbsp;<a href="page58.html">58</a>&nbsp;&nbsp;&nbsp;<a href="page59.html">59</a>
+             	&nbsp;&nbsp;&nbsp;<a href="page54.html">54</a>&nbsp;&nbsp;&nbsp;<a href="page55.html">55</a>&nbsp;&nbsp;&nbsp;<a href="page56.html">56</a>&nbsp;&nbsp;&nbsp;<a href="page57.html">57</a>&nbsp;&nbsp;&nbsp;<a href="page58.html">58</a>&nbsp;&nbsp;&nbsp;<a href="page59.html">59</a>&nbsp;&nbsp;&nbsp;<a href="page60.html">60</a>&nbsp;&nbsp;&nbsp;<a href="page61.html">61</a>
              </td>
-             <td width="35%"><a href="page55.html"><img src="images/next.png" width="26" height="19" id="Image1" onmouseover="MM_swapImage('Image1','','images/next2.png',1)" onmouseout="MM_swapImgRestore()" /></a></td>
+             <td width="35%"><a href="page60.html"><img src="images/next.png" width="26" height="19" id="Image1" onmouseover="MM_swapImage('Image1','','images/next2.png',1)" onmouseout="MM_swapImgRestore()" /></a></td>
            </tr>
          </table>
        </div>
@@ -237,7 +262,7 @@ function MM_swapImage() { //v3.0
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
-  <p><a href="page55.html"><img src="images/next_big.png" width="90" height="80" /></a></p>
+  <p><a href="page60.html"><img src="images/next_big.png" width="90" height="80" /></a></p>
 </div>
 
 
