--- a/files/basic-html/page82.html
+++ b/files/basic-html/page82.html
@@ -152,7 +152,60 @@ function MM_swapImage() { //v3.0
     </div>
 
     <p class="use-as-video-title"></p>
-    <pre style="white-space:pre-line"><code></code></pre>
+    <pre style="white-space:pre-line"><code>Donasi 1.000 Masker
+
+
+
+
+                                                      Batik
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                                                                                                    Page 65</code></pre>
      	</div>
     
      </div>
@@ -162,9 +215,9 @@ function MM_swapImage() { //v3.0
            <tr>
              <td width="22%" height="44"><a href="page81.html"><img src="images/previous.png" width="26" height="19" id="Image2" onmouseover="MM_swapImage('Image2','','images/previous2.png',1)" onmouseout="MM_swapImgRestore()" /></a></td>
              <td width="43%">
-             	&nbsp;&nbsp;&nbsp;<a href="page77.html">77</a>&nbsp;&nbsp;&nbsp;<a href="page78.html">78</a>&nbsp;&nbsp;&nbsp;<a href="page79.html">79</a>&nbsp;&nbsp;&nbsp;<a href="page80.html">80</a>&nbsp;&nbsp;&nbsp;<a href="page81.html">81</a>&nbsp;&nbsp;&nbsp;<a href="page82.html">82</a>
+             	&nbsp;&nbsp;&nbsp;<a href="page77.html">77</a>&nbsp;&nbsp;&nbsp;<a href="page78.html">78</a>&nbsp;&nbsp;&nbsp;<a href="page79.html">79</a>&nbsp;&nbsp;&nbsp;<a href="page80.html">80</a>&nbsp;&nbsp;&nbsp;<a href="page81.html">81</a>&nbsp;&nbsp;&nbsp;<a href="page82.html">82</a>&nbsp;&nbsp;&nbsp;<a href="page83.html">83</a>&nbsp;&nbsp;&nbsp;<a href="page84.html">84</a>&nbsp;&nbsp;&nbsp;<a href="page85.html">85</a>&nbsp;&nbsp;&nbsp;<a href="page86.html">86</a>&nbsp;&nbsp;&nbsp;<a href="page87.html">87</a>
              </td>
-             <td width="35%"><a href=""><img src="images/next.png" width="26" height="19" id="Image1" onmouseover="MM_swapImage('Image1','','images/next2.png',1)" onmouseout="MM_swapImgRestore()" /></a></td>
+             <td width="35%"><a href="page83.html"><img src="images/next.png" width="26" height="19" id="Image1" onmouseover="MM_swapImage('Image1','','images/next2.png',1)" onmouseout="MM_swapImgRestore()" /></a></td>
            </tr>
          </table>
        </div>
@@ -177,7 +230,7 @@ function MM_swapImage() { //v3.0
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
-  <p><a href=""><img src="images/next_big.png" width="90" height="80" /></a></p>
+  <p><a href="page83.html"><img src="images/next_big.png" width="90" height="80" /></a></p>
 </div>
 
 
