--- a/files/basic-html/page84.html
+++ b/files/basic-html/page84.html
@@ -4,7 +4,7 @@
 				<meta name="robots" content="all"/>
         <meta name="description" content="description">
         <meta name="keywords" content="">
-        <title>Page 81 - Kegiatan tahap 4</title>
+        <title>Page 84 - Kegiatan tahap 4</title>
 <style type="text/css">
 <!--
 body {
@@ -123,7 +123,7 @@ function MM_swapImage() { //v3.0
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
-  <p><a href="page80.html"><img src="images/previous_big.png" width="90" height="80" /></a></p>
+  <p><a href="page83.html"><img src="images/previous_big.png" width="90" height="80" /></a></p>
 </div>
 <div id="middle">
   <div id="top-title"><span class="font1">Basic HTML Version</span>
@@ -134,44 +134,48 @@ function MM_swapImage() { //v3.0
           <td width="35%" style="display:none" align="right"><img src="images/content.png" width="19" height="16" /></td>
           <td width="31%" style="display:none" class="font1"><a href="">Table of Contents</a></td>
           <td width="6%"><img src="images/view.png" width="19" height="16" /></td>
-          <td width="28%" class="font1"><a href="../../index.html#p=81">View Full Version</a></td>
+          <td width="28%" class="font1"><a href="../../index.html#p=84">View Full Version</a></td>
         </tr>
       </table>
     </div>
   </div>
   <div id="content">
      <div id="content-top">
-        <div id="content-top1">Page 81 - Kegiatan tahap 4</div>
-        <div id="content-top2">P. 81</div>
+        <div id="content-top1">Page 84 - Kegiatan tahap 4</div>
+        <div id="content-top2">P. 84</div>
      </div>
      <div id="content-middle">
      	
      	  <div class="text-container">
     <div class="use-as-video cc-float-fix">
-      <a style="text-decoration: none;" href="../../index.html#p=81"><img src="../thumb/81.jpg" /></a>
+      <a style="text-decoration: none;" href="../../index.html#p=84"><img src="../thumb/84.jpg" /></a>
     </div>
 
     <p class="use-as-video-title"></p>
-    <pre style="white-space:pre-line"><code>UPDT BPSMB KTG BOGOR 
+    <pre style="white-space:pre-line"><code>Ketua Dekranasda Jawa Barat  Ibu Atalia Praratya sangat
 
 
+             mengapresiasi  donasi  dari  desainer  fashion  ternama  ini,
 
-         Melaksanakan  Kegiatan
 
 
-         Kalibrasi  pada  Tanggal  22
+             selain  turut  membantu  mengatasi  pandemi  Covid-19,
 
 
+             kegiatan  ini  juga  turut  mengenalkan  motif-motif  batik
 
-         Oktober 2020
 
+             Sunda  yang  dimanfaatkan  dari  sisa-sisa  bahan  hasil
 
 
 
+             kreasi Vivi Zubedi. Masker ini juga telah bersertiﬁkat SNI
 
 
+             yang  tentunya  memberikan  keamanan  lebih  bagi  para
 
 
+             penggunanya.
 
 
 
@@ -187,53 +191,7 @@ function MM_swapImage() { //v3.0
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                                                                                                    Page 66</code></pre>
+                                                                                                    Page 65</code></pre>
      	</div>
     
      </div>
@@ -241,11 +199,11 @@ function MM_swapImage() { //v3.0
        <div id="content-bottom2">
          <table width="110" border="0" cellspacing="0" cellpadding="0">
            <tr>
-             <td width="22%" height="44"><a href="page80.html"><img src="images/previous.png" width="26" height="19" id="Image2" onmouseover="MM_swapImage('Image2','','images/previous2.png',1)" onmouseout="MM_swapImgRestore()" /></a></td>
+             <td width="22%" height="44"><a href="page83.html"><img src="images/previous.png" width="26" height="19" id="Image2" onmouseover="MM_swapImage('Image2','','images/previous2.png',1)" onmouseout="MM_swapImgRestore()" /></a></td>
              <td width="43%">
-             	&nbsp;&nbsp;&nbsp;<a href="page76.html">76</a>&nbsp;&nbsp;&nbsp;<a href="page77.html">77</a>&nbsp;&nbsp;&nbsp;<a href="page78.html">78</a>&nbsp;&nbsp;&nbsp;<a href="page79.html">79</a>&nbsp;&nbsp;&nbsp;<a href="page80.html">80</a>&nbsp;&nbsp;&nbsp;<a href="page81.html">81</a>&nbsp;&nbsp;&nbsp;<a href="page82.html">82</a>&nbsp;&nbsp;&nbsp;<a href="page83.html">83</a>&nbsp;&nbsp;&nbsp;<a href="page84.html">84</a>&nbsp;&nbsp;&nbsp;<a href="page85.html">85</a>&nbsp;&nbsp;&nbsp;<a href="page86.html">86</a>
+             	&nbsp;&nbsp;&nbsp;<a href="page79.html">79</a>&nbsp;&nbsp;&nbsp;<a href="page80.html">80</a>&nbsp;&nbsp;&nbsp;<a href="page81.html">81</a>&nbsp;&nbsp;&nbsp;<a href="page82.html">82</a>&nbsp;&nbsp;&nbsp;<a href="page83.html">83</a>&nbsp;&nbsp;&nbsp;<a href="page84.html">84</a>&nbsp;&nbsp;&nbsp;<a href="page85.html">85</a>&nbsp;&nbsp;&nbsp;<a href="page86.html">86</a>&nbsp;&nbsp;&nbsp;<a href="page87.html">87</a>&nbsp;&nbsp;&nbsp;<a href="page88.html">88</a>&nbsp;&nbsp;&nbsp;<a href="page89.html">89</a>
              </td>
-             <td width="35%"><a href="page82.html"><img src="images/next.png" width="26" height="19" id="Image1" onmouseover="MM_swapImage('Image1','','images/next2.png',1)" onmouseout="MM_swapImgRestore()" /></a></td>
+             <td width="35%"><a href="page85.html"><img src="images/next.png" width="26" height="19" id="Image1" onmouseover="MM_swapImage('Image1','','images/next2.png',1)" onmouseout="MM_swapImgRestore()" /></a></td>
            </tr>
          </table>
        </div>
@@ -258,7 +216,7 @@ function MM_swapImage() { //v3.0
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
-  <p><a href="page82.html"><img src="images/next_big.png" width="90" height="80" /></a></p>
+  <p><a href="page85.html"><img src="images/next_big.png" width="90" height="80" /></a></p>
 </div>
 
 
